--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "@fortawesome/react-fontawesome": "^0.1.16",
     "@material-ui/core": "4.11.4",
     "@material-ui/icons": "4.11.2",
+    "@mui/material": "^5.2.2",
+    "@mui/x-data-grid": "^5.0.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -35,17 +37,21 @@
     "react-loader-spinner": "^4.0.0",
     "react-loading": "^2.0.3",
     "react-modal": "^3.14.4",
+    "react-notification-badge": "^1.5.1",
+    "react-notifications": "^1.7.2",
     "react-paginate": "^8.0.0",
     "react-paypal-button-v2": "^2.6.3",
     "react-pdf": "^5.5.0",
     "react-player": "^2.9.0",
     "react-prism": "^4.3.2",
     "react-pro-sidebar": "^0.7.1",
+    "react-push-notification": "^1.3.0",
     "react-recaptcha": "^2.3.10",
     "react-redux": "^7.2.4",
     "react-responsive-carousel": "^3.2.22",
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.3",
+    "react-scroll-to-bottom": "^4.2.0",
     "react-search-box": "^2.1.1",
     "react-search-field": "^2.0.1",
     "react-select": "^5.2.1",
@@ -59,6 +65,7 @@
     "redux-saga": "^1.1.3",
     "redux-thunk": "^2.3.0",
     "sass": "^1.34.1",
+    "socket.io-client": "^4.4.0",
     "universal-cookie": "^4.0.4",
     "validator": "^13.6.0",
     "video-react": "^0.14.1",
