--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "classnames": "2.3.1",
     "font-awesome": "^4.7.0",
     "history": "5.0.0",
+    "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "perfect-scrollbar": "1.5.1",
     "prop-types": "15.7.2",
