--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-chartist": "0.14.4",
     "react-copy-to-clipboard": "^5.0.4",
     "react-dom": "17.0.2",
+    "react-datepicker": "4.7.0",
     "react-download-link": "^2.3.0",
     "react-facebook-login": "^4.1.1",
     "react-google-login": "^5.2.2",
