--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
     "react-bootstrap": "^1.5.2",
     "react-chartist": "0.14.4",
     "react-copy-to-clipboard": "^5.0.4",
-    "react-dom": "17.0.2",
     "react-datepicker": "4.7.0",
+    "react-dom": "17.0.2",
     "react-download-link": "^2.3.0",
     "react-facebook-login": "^4.1.1",
     "react-google-login": "^5.2.2",
@@ -46,6 +46,8 @@
     "react-paginate": "^8.0.0",
     "react-paypal-button-v2": "^2.6.3",
     "react-pdf": "^5.5.0",
+    "react-phone-input-2": "^2.15.0",
+    "react-phone-number-input": "^3.1.47",
     "react-player": "^2.9.0",
     "react-prism": "^4.3.2",
     "react-pro-sidebar": "^0.7.1",
