--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "bootstrap": "^4.6.0",
     "chartist": "0.10.1",
     "classnames": "2.3.1",
+    "draft-convert": "^2.1.12",
+    "draft-js": "^0.11.7",
     "font-awesome": "^4.7.0",
     "history": "5.0.0",
     "lodash": "^4.17.21",
@@ -34,12 +36,14 @@
     "react-datepicker": "4.7.0",
     "react-dom": "17.0.2",
     "react-download-link": "^2.3.0",
+    "react-draft-wysiwyg": "^1.14.7",
     "react-facebook-login": "^4.1.1",
     "react-google-login": "^5.2.2",
     "react-google-recaptcha": "^2.1.0",
     "react-icons": "^4.3.1",
     "react-loader-spinner": "^4.0.0",
     "react-loading": "^2.0.3",
+    "react-media": "^1.10.0",
     "react-modal": "^3.14.4",
     "react-notification-badge": "^1.5.1",
     "react-notifications": "^1.7.2",
