--- a/package.json
+++ b/package.json
@@ -25,9 +25,10 @@
     "history": "5.0.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
+    "moment-timezone": "^0.5.34",
     "perfect-scrollbar": "1.5.1",
     "prop-types": "15.7.2",
-    "react": "17.0.2",
+    "react": "^17.0.2",
     "react-agenda-calendar": "^1.1.2",
     "react-avatar": "^3.10.0",
     "react-bootstrap": "^1.5.2",
@@ -41,10 +42,12 @@
     "react-google-login": "^5.2.2",
     "react-google-recaptcha": "^2.1.0",
     "react-icons": "^4.3.1",
+    "react-live-clock": "^5.7.0",
     "react-loader-spinner": "^4.0.0",
     "react-loading": "^2.0.3",
     "react-media": "^1.10.0",
     "react-modal": "^3.14.4",
+    "react-moment": "^1.1.2",
     "react-notification-badge": "^1.5.1",
     "react-notifications": "^1.7.2",
     "react-paginate": "^8.0.0",
@@ -67,6 +70,7 @@
     "react-select": "^5.2.1",
     "react-swipeable-views": "0.13.9",
     "react-switch": "^6.0.0",
+    "react-time-picker": "^4.5.0",
     "react-tooltip": "^4.2.21",
     "react-video-js-player": "^1.1.1",
     "react-video-upload-preview": "^1.0.1",
