--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
     "@material-ui/icons": "4.11.2",
     "@mui/material": "^5.2.2",
     "@mui/x-data-grid": "^5.0.1",
+    "@paypal/react-paypal-js": "^7.8.1",
     "@react-pdf/renderer": "^2.0.21",
+    "@stripe/react-stripe-js": "^1.9.0",
+    "@stripe/stripe-js": "^1.32.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@videosdk.live/react-sdk": "^0.1.36",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "chartist": "0.10.1",
@@ -55,7 +59,7 @@
     "react-pdf": "^5.5.0",
     "react-phone-input-2": "^2.15.0",
     "react-phone-number-input": "^3.1.47",
-    "react-player": "^2.9.0",
+    "react-player": "^2.10.1",
     "react-prism": "^4.3.2",
     "react-pro-sidebar": "^0.7.1",
     "react-push-notification": "^1.3.0",
@@ -81,6 +85,7 @@
     "redux-thunk": "^2.3.0",
     "sass": "^1.34.1",
     "simple-peer": "^9.11.0",
+    "socket.io-client": "^4.5.1",
     "universal-cookie": "^4.0.4",
     "validator": "^13.6.0",
     "video-react": "^0.14.1",
